--- a/Project.toml
+++ b/Project.toml
@@ -32,7 +32,6 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 RobustAndOptimalControl = "21fd56a4-db03-40ee-82ee-a87907bee541"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
-SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
@@ -42,11 +41,11 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
 AbstractTrees = "0.4.4"
-CImGui = "1.89.0"
+CImGui = "=1.89.1"
 ComponentArrays = "0.15.14"
 ControlSystems = "1.10.3"
 DataStructures = "0.18.15"
-DiffEqCallbacks = "3.6.2"
+DiffEqCallbacks = "3.8.0"
 FiniteDiff = "2.23.1"
 GLFW = "3.4.3"
 GR = ">=0.73.6"
@@ -56,14 +55,13 @@ ImGuiOpenGLBackend = "0.2.0"
 Interpolations = ">=0.15.1"
 JSON3 = "1.14.0"
 LaTeXStrings = "1.3.1"
-NLopt = "1.0.2"
-OrdinaryDiffEq = "6.85.0"
+NLopt = "1.0.3"
+OrdinaryDiffEq = "6.89.0"
 Plots = "1.40.5"
 RecursiveArrayTools = ">=2.38.10"
 Reexport = "1.2.2"
 RobustAndOptimalControl = "0.4.31"
 Roots = "2.1.5"
-SciMLBase = "2.42.0"
 StaticArrays = "1.9.7"
 StructArrays = "0.6.18"
 StructTypes = "1.10.0"
