--- a/Project.toml
+++ b/Project.toml
@@ -31,6 +31,7 @@ RecursiveArrayTools = "731186ca-8d62-57ce-b412-fbd966d074cd"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 RobustAndOptimalControl = "21fd56a4-db03-40ee-82ee-a87907bee541"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
+SDL2_jll = "ab825dc5-c88e-5901-9575-1e5e20358fcf"
 SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
@@ -48,7 +49,7 @@ DataStructures = "0.18.15"
 DiffEqCallbacks = ">=3.8.0"
 FiniteDiff = "2.23.1"
 GLFW = "3.4.3"
-GR = ">=0.73.6"
+GR = ">=0.72"
 HDF5 = ">=0.17.2"
 Interpolations = ">=0.15.1"
 JSON3 = "1.14.0"
@@ -62,6 +63,7 @@ RecursiveArrayTools = ">=2.38.10"
 Reexport = "1.2.2"
 RobustAndOptimalControl = "0.4.31"
 Roots = "2.1.5"
+SDL2_jll = "2.24.2"
 StaticArrays = "1.9.7"
 StructArrays = ">=0.7.0"
 StructTypes = "1.10.0"
