--- a/test/Project.toml
+++ b/test/Project.toml
@@ -16,12 +16,13 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
-BenchmarkTools = ">=1.5.0"
+BenchmarkTools = "1.5.0"
 ComponentArrays = "0.15.14"
 ControlSystems = "1.14"
 FiniteDiff = "2.23.1"
 Interpolations = "0.16"
 JSON3 = "1.14.0"
+Plots = "1.40.5"
 StaticArrays = "1.9.7"
 StructTypes = "1.10.0"
 UnPack = "1.0.2"
