--- a/.github/workflows/Documenter.yml
+++ b/.github/workflows/Documenter.yml
@@ -3,7 +3,7 @@ name: Documenter
 on:
   push:
     branches:
-      - doc_test
+      - master
     tags: '*'
   pull_request:
 
@@ -22,10 +22,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
         with:
-          version: '1.11'                         # replace this with whatever version you need
-          show-versioninfo: true               # this causes versioninfo to be printed to the action log
-      - uses: julia-actions/cache@v2              # cache using https://github.com/julia-actions/cache
-      - uses: julia-actions/julia-buildpkg@v1  # if package requires Pkg.build()
+          version: '1.11'
+          show-versioninfo: true
+      - uses: julia-actions/cache@v2
+      - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-docdeploy@v1
         with:
           prefix: xvfb-run
