--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ ControlSystems = "a6e380b2-a6ca-5380-bf3e-84a91bcd477e"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
+EnumX = "4e289a0a-7415-4d19-859d-a7e5c4648b56"
 FiniteDiff = "6a86dc24-6348-571c-b903-95158fe2bd41"
 GLFW = "f7f18e0c-5ee9-5ccd-a5bf-e8befd85ed98"
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
@@ -47,6 +48,7 @@ ComponentArrays = "0.15.14"
 ControlSystems = "1.14"
 DataStructures = "0.18.15"
 DiffEqCallbacks = "4.8"
+EnumX = "1.0.5"
 FiniteDiff = "2.23.1"
 GLFW = "3.4.3"
 GR = "0.73"
