--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 RobustAndOptimalControl = "21fd56a4-db03-40ee-82ee-a87907bee541"
+Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 
 [sources]
 FlightApps = {path = "packages/FlightApps"}
@@ -26,3 +27,4 @@ LaTeXStrings = "1.4.0"
 Plots = "1.41.5"
 Reexport = "1.2.2"
 RobustAndOptimalControl = "0.4.49"
+Sockets = "1.11.0"
